monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4036/I.mc4
/* (c) https://github.com/MontiCore/monticore */
package de.monticore.grammar.cocos.invalid.A4036;

grammar I {


}